# ChangeLog for dev-python/upoints
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Mar 2012; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild:
  Removed Python 2.4 support.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild:
  Added PYTHON_DEPEND setting.

  14 Feb 2010; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild:
  Incompatible with python 2.4 due to conditional expressions, and
  incompatible with 3.x due to exception handling syntax. The upstream [me]
  has no desire to support those versions either.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild:
  Switched to EAPI 2.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild:
  Keyworded amd64.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild:
  Keyworded x86.

*upoints-0.11.0 (23 May 2009)

  23 May 2009; James Rowe <jnrowe@gmail.com> +upoints-0.11.0.ebuild,
  +metadata.xml:
  Imported from pre-github misc overlay.
