@@ -1,11 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST upoints-0.11.0.tar.bz2 200305 RMD160 c0f4e763ef2fdc7cfff0b64283a9eb7347719961 SHA1 5c01d9d6ead61652410fe4366d44ec20a863cb44 SHA256 28db7cce44a6e1ac7b6b282c8da9aea2fa254c806b0565708c483004d4e4cfe9
+DIST upoints-0.11.0.tar.gz 105620 RMD160 683b5d5f34aacf234467c8075d184a032c4f6ba4 SHA1 e3a65fd81d3d2c485a0dcf92d9bdcbcfc24d1e85 SHA256 d591aaecfa2d5d22688ab3e6eb309a48e365e9a1975ba9145472a95344e382cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9SQ5kACgkQzJrj3cAXR0kWtQCglmtryYw6fx8+oDhgfyJxdYI2
-nOAAn3/zYmoeza/duaKbcp0Z84iSI8Nd
-=HjJV
+iEYEAREKAAYFAk9mFf4ACgkQzJrj3cAXR0mSKwCfTveElM5nqUwzVaR5fQxGMyTL
+HfUAoI8m+7JWl5f6DjBDJVr1lVnnPsNS
+=FJsx
 -----END PGP SIGNATURE-----
