@@ -22,7 +22,7 @@
 			<name>James Rowe</name>
 		</maintainer>
 		<changelog>https://github.com/JNRowe/upoints/raw/master/NEWS.rst</changelog>
-		<doc lang="en">http://www.jnrowe.ukfsn.org/projects/upoints.html</doc>
+		<doc lang="en">http://jnrowe.github.com/upoints/</doc>
 		<bugs-to>https://github.com/JNRowe/upoints/issues</bugs-to>
 	</upstream>
 </pkgmetadata>
