@@ -1,12 +1,12 @@
-DEFINED_PHASES=compile install postinst postrm prepare test
+DEFINED_PHASES=compile install postinst postrm prepare setup test unpack
 DEPEND=>=app-admin/eselect-python-20091230 =dev-lang/python-2*
 DESCRIPTION=Modules for working with points on Earth
-EAPI=2
-HOMEPAGE=http://www.jnrowe.ukfsn.org/projects/upoints.html
+EAPI=4
+HOMEPAGE=https://github.com/JNRowe/upoints/
 KEYWORDS=amd64 x86
 LICENSE=GPL-3
 RDEPEND=>=app-admin/eselect-python-20091230 =dev-lang/python-2*
 SLOT=0
-SRC_URI=http://www.jnrowe.ukfsn.org/_downloads/upoints-0.11.0.tar.bz2
-_eclasses_=distutils	c8b0cab86443a130f3737ad1456d57d3	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	dc3993dc1961bbb13c11bb835390ca29	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68
-_md5_=55d221b41f3898dfafde53ea5f6184ac
+SRC_URI=https://github.com/JNRowe/upoints/tarball/0.11.0 -> upoints-0.11.0.tar.gz
+_eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	ba24d79270ea0022703f16b5de80051c	jnrowe-github	4f89007fa76ac32f8d1e9c33826daebc	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	dc3993dc1961bbb13c11bb835390ca29	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
+_md5_=725ab36110a0db086b47c5bb442df877
