@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Mar 2012; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild,
+  metadata.xml:
+  Use GitHub for homepage/downloads.
+
   14 Mar 2012; James Rowe <jnrowe@gmail.com> upoints-0.11.0.ebuild:
   Use ${PN} in ${HOMEPAGE}.
 
